--- a/.gitignore
+++ b/.gitignore
@@ -151,7 +151,7 @@ dmypy.json
 # pytype static type analyzer
 .pytype/
 
-# Cython debug symbols
+# Cython debug SYMBOLs
 cython_debug/
 
 # PyCharm
